[project]
name = "nonebot-plugin-hitokoto-plus"
version = "0.1.0"
description = "（可能是）更好的一言插件！"
authors = [
    {name = "enKl03B", email = "enKl03B@163.com"},
]
dependencies = [
    "nonebot2>=2.3.0",
    "httpx>=0.23.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-alconna>=0.57.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/enKl03B/nonebot-plugin-hitokoto-plus"
repository = "https://github.com/enKl03B/nonebot-plugin-hitokoto-plus"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 